# gecko2

./: .gitignore  readme.md
cpp/: CMakeLists.txt  format-code.sh  library.properties  readme.md
cpp/examples/: CMakeLists.txt  config.cpp  config.txt  csv.cpp  linked_list.c  msg.cpp  node.cpp  node_udp.cpp  node_uds.cpp  nodes.csv  signal.c
cpp/examples/messages/: CMakeLists.txt  main.cpp
cpp/examples/quad/: CMakeLists.txt  imu.hpp  main.cpp  tf.hpp
cpp/gtests/: CMakeLists.txt  blackbox.cpp  fsm.cpp  main-gtest.cpp  messages.cpp  vector.cpp
cpp/src/: blackbox.hpp  defaults.hpp  gecko2.hpp  linked_list.h  return_type.hpp  toggle.hpp  units.hpp  vector.hpp
cpp/src/apps/: alarm.hpp  heartbeat.hpp
cpp/src/arduino/: performance.hpp  time.hpp  units.cpp
cpp/src/arduino/leds/: blinkled.hpp  leds.hpp
cpp/src/containers/: vector.hpp
cpp/src/gecko2/: blackbox.hpp  fsm.hpp  kf.hpp  messages.hpp  toggle.hpp
cpp/src/gecko2/boards/adafruit/: Adafruit_ItsyBitsy_M0.hpp  Adafruit_ItsyBitsy_M4.hpp
cpp/src/gecko2/boards/generic/: generic.hpp
cpp/src/unix/: colors.hpp  logger.hpp  rate.hpp  return_type.hpp  signals.h  signals.hpp  time.hpp  units.cpp
docker/gecko-micro-services/: Dockerfile.pub  docker-compose.yml  readme.md
python/: pyproject.toml
